force-app/main/default/objects/last_shareholder_arrangement__c/last_shareholder_arrangement__c.object-meta.xml
<CustomObject>
    <label>Last Shareholder Arrangement</label>
    <nameField>
        <label>Nama Pemegang Saham</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Last Shareholder Arrangements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>