force-app/main/default/objects/last_shareholder_arrangement__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Last Shareholder Arrangements</relationshipLabel>
    <relationshipName>Last_Shareholder_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>