force-app/main/default/objects/last_shareholder_arrangement__c/fields/jumlah_saham__c.field-meta.xml
<CustomField>
    <fullName>jumlah_saham__c</fullName>
    <label>Jumlah Saham</label>
    <length>10</length>
    <type>Text</type>
</CustomField>