force-app/main/default/objects/last_shareholder_arrangement__c/fields/jumlah_saham_rupiah__c.field-meta.xml
<CustomField>
    <fullName>jumlah_saham_rupiah__c</fullName>
    <label>Jumlah (Rp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>