force-app/main/default/objects/last_shareholder_arrangement__c/validationRules/Jumlah_Saham_Number_Must_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Jumlah_Saham_Number_Must_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(jumlah_saham__c)),
NOT(REGEX(jumlah_saham__c, &quot;^\\d{1,10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>jumlah_saham__c</errorDisplayField>
    <errorMessage>Maximum 10 digit number only.</errorMessage>
</ValidationRule>